--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
   <link rel="stylesheet" href="style.css" />
   <title>avazik.com</title>
+  <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101186547);</script>
+<script async src="//static.getclicky.com/js"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
