--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="link" id="linkedin"></div>
 	</a>
 	<a href="https://www.instagram.com/avazkhon2001/" style="text-decoration:none">
-  <div class="link" id="instagram"></div>
+  <div class="link" id="medium"></div>
   </a>
 
 	</span>
