--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 
   <link rel="stylesheet" href="style.css" />
+  <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101186702);</script>
+<script async src="//static.getclicky.com/js"></script>
+
   <title>avazik.com</title>
 
 </head>
