--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
    
    <br>
 	<span>
-	<a href="my-resume.pdf" style="text-decoration:none" title="Resume">
+	<a href="my-resume.pdf" style="text-decoration:none" title="Resume" target="_blank">
 	<div class="link" id="resume"></div>
 	</a>
-	<a href="https://github.com/avazik" style="text-decoration:none" title="Github">
+	<a href="https://github.com/avazik" style="text-decoration:none" title="Github" target="_blank">
 	<div class="link" id="github"></div>
 	</a>
-	<a href="https://www.linkedin.com/in/avazkhon-sidykov-8447ab15a/" style="text-decoration:none" title="LinkedIn">
+	<a href="https://www.linkedin.com/in/avazkhon-sidykov-8447ab15a/" style="text-decoration:none" title="LinkedIn" target="_blank">
 	<div class="link" id="linkedin"></div>
 	</a>
-	<a href="https://www.instagram.com/avazkhon2001/" style="text-decoration:none">
+	<a href="https://www.instagram.com/avazkhon2001/" style="text-decoration:none" target="_blank">
   <div class="link" id="medium"></div>
   </a>
 
@@ -133,7 +133,7 @@
 <img class="page" src="Screenshot (618).png" width="120%" alt="I Care about humanity, diversity, women in tech, entrepreneurship, technology, love" style="margin-top: 50px;">
 <br>
 
-<img class="sign" src="img/sign.gif" width="12%" alt="Signature">
+
 <br>
 
 <footer>
@@ -144,8 +144,9 @@
 
 
 
+	
 
-    
+   
 
        <a href="https://www.facebook.com/profile.php?id=100012327662864" class="fa fa-facebook">facebook</a>
        <p style="font-size:12px;"> 2019 ALL RIGHTS RESERVED </p>
