--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <span class="flag">American Space</span>
         <span class="time-wrapper"><span class="time">2016-2019</span></span>
       </div>
-      <div class="desc">American Space Khujand had a huge impact in my life its a place wehre I mastered English.I have done a lot of community service in ASK by leading clubs about Tech, entrepreneurship English clubs and much more</div>
+      <div class="desc">American Space Khujand had a huge impact in my life its a place where I mastered English.I have done a lot of community service in ASK by leading clubs about Tech, entrepreneurship English clubs and much more</div>
       <img class="pic" style="max-width: 240px; max-height: 240px; border-radius:5px;" src="Screenshot (627).png" alt="ASK" >
     </div>
   </li>
@@ -83,7 +83,7 @@
         <span class="flag">Musical Eduaction</span>
         <span class="time-wrapper"><span class="time">2014-2019</span></span>
       </div>
-      <div class="desc">Graduating from musical school course of guiutar with A grade also learned to play </div>
+      <div class="desc">Graduating from musical school course of guitar with A grade also learned to play </div>
     </div>
   </li>
 
@@ -94,7 +94,7 @@
         <span class="flag">Tajrupt</span>
         <span class="time-wrapper"><span class="time">Summer 2017-2018</span></span>
       </div>
-      <div class="desc">In Tajrupt I took courses like Model UN, State of Affairs,Economics and Globaliztion. also became an intern and course assitant for Innovation incubator course where we worked on the idea of pioneering Artiificial Intelgence in Tajikistan. Learned concepts like blockchain, AI,supply and demand etc. also covered many study cases like FB in early stages, Nike startup. But in the summer of 2018 I decided to leave tajrupt because os come circumstances </div>
+      <div class="desc">In Tajrupt I took courses like Model UN, State of Affairs,Economics and Globaliztion. also became an intern and course assitant for Innovation incubator course where we worked on the idea of pioneering Artiificial Intelgence in Tajikistan. Learned concepts like blockchain, AI,supply and demand etc. also covered many study cases like FB in early stages, Nike startup. But in the summer of 2018 I decided to leave tajrupt because of come circumstances </div>
       
     </div>
   </li>
