--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101186702);</script>
 <script async src="//static.getclicky.com/js"></script>
 
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=536f65bf-2fcc-4ebc-819b-83f28a1009a4"> </script>
+
+
   <title>avazik.com</title>
 
 </head>
